--- a/Assignment-Profile Page/style.css
+++ b/Assignment-Profile Page/style.css
@@ -1,16 +1,10 @@
 #mainheader img{
     height: 100%;
     width: 100%;
+    padding: 0;
 }
 .bg-black{
     color: white;
     background-color: black;
-}
-.port-item{
-    width:30%;
-}
-@media(min-width: 1199px) {
-   .port-item{
-       padding: 3em !important;
-   }
+    opacity: 0.7;
 }
