--- a/Assignment-Profile Page/style.css
+++ b/Assignment-Profile Page/style.css
@@ -16,18 +16,34 @@
     cursor: pointer;
 }
 @media (max-width: 575.98px) {
-    .port-item{
-        width:30%;
+    #homeicon{
+        font-size: 1.5em;
+    }
+    #resumeicon{
+        font-size: 1.5em;
+    }
+    #contacticon{
+        font-size: 1.5em;
+    }
+    #workicon{
+        font-size: 1.5em;
+    }
+    #name{
+        font-size: 2rem;
     }
 }
 
-@media (min-width: 576px) and (max-width: 767.98px) {
+@media (min-width: 767.96px) and (max-width: 991px) {
+    #name{
+        font-size: 2.5rem;
+    }
 
 }
 @media (min-width: 992px) and (max-width: 1199.98px) {
     .port-item{
         height:6em;
     }
+
 }
 
 @media (min-width: 1200px) {
